# cfAnRes

./: .gitignore  pyproject.toml
doc/hyTask/: task_thn.yml
src/: file_loader.py
src/cfanres/: doc_loader.py  file_loader.py  thn_operator.py  utils.py
tools/ML/prepare/config/: config_sample.yml
tools/ML/prepare/src/: BDT_training_pt.py  prepare_samples.py  utils.py
tools/ML/prepare/test/: notebook.ipynb
tools/download/: config_download.yml  config_multi_download.yaml  download.py  multi_download.py
tools/notebook/: 8_13.ipynb  8_13.yml  compare.ipynb  compare_2pc.ipynb  file_list.ipynb  monitor.ipynb
tools/occupancy/test/: template.ipynb  test.ipynb
tools/template/: basic.py  basic_data.py  basic_data_rovere.py  basic_eff.py  basic_eff_cand_event.py  basic_nomalized.py  basic_sovere.py  config_basic.yml  merge_pdf.py
utils/: get_method.py  pdg_env.py
